Name:                mindsnap
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable mindsnap
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    bytestring                >= 0.9.1, 
    heist                     >= 1.0, 
    map-syntax                >= 0.2,    
    monad-control             >= 1.0,   
    mtl                       >= 2,    
    snap                      >= 1.0,    
    snap-core                 >= 1.0,   
    snap-server               >= 1.0,
    snap-loader-static        >= 1.0,   
    text                      >= 0.11,  
    time                      >= 1.1,   
    xmlhtml                   >= 0.1,
    snaplet-postgresql-simple >= 0.3,
    snap-extras               >= 0.7,
    aeson                     >= 0.6.0.0

  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens                      >= 3.7.6    && < 3.8
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens                      >= 3.7.6    && < 5

  if flag(development)
    build-depends:
      snap-loader-dynamic >= 1.0 && < 1.1
    cpp-options: -DDEVELOPMENT
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
